<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>xspanger.GlobalQuake</groupId>
        <artifactId>GlobalQuake</artifactId>
        <version>0.11.0_pre-2</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>GlobalQuakeCore</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>data-local</id>
            <name>data</name>
            <url>file://${project.basedir}/../libs</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>edu.sc.seis</groupId>
            <artifactId>seisFile</artifactId>
            <version>2.1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.tinylog</groupId>
            <artifactId>tinylog-api</artifactId>
            <version>2.5.0</version>
        </dependency>
        <dependency>
            <groupId>org.tinylog</groupId>
            <artifactId>tinylog-impl</artifactId>
            <version>2.5.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.geotools/gt-geojson -->
        <dependency>
            <groupId>de.grundid.opendatalab</groupId>
            <artifactId>geojson-jackson</artifactId>
            <version>1.14</version>
        </dependency>
         <!-- https://mvnrepository.com/artifact/edu.sc.seis/seedCodec -->
        <dependency>
            <groupId>edu.sc.seis</groupId>
            <artifactId>seedCodec</artifactId>
            <version>1.1.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/edu.sc.seis/TauP -->
        <dependency>
            <groupId>edu.sc.seis</groupId>
            <artifactId>TauP</artifactId>
            <version>2.6.1</version>
        </dependency>
        <dependency>
            <groupId>uk.me.berndporr</groupId>
            <artifactId>iirj</artifactId>
            <version>1.3</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.github.wendykierp/JTransforms -->
        <dependency>
            <groupId>com.github.wendykierp</groupId>
            <artifactId>JTransforms</artifactId>
            <version>3.1</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20231013</version>
        </dependency>
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>xspanger.GlobalQuake</groupId>
            <artifactId>GlobalQuakeAPI</artifactId>
            <version>0.9.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>3.0.2</version>
        </dependency>
    </dependencies>

</project>